--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ button,
   font-size: 1rem;
   /* if you change the font, don't forget to change it here too! */
   font-family: "Source Sans Pro", sans-serif;
-  padding: 0.6rem 1.2rem;
+  padding: 0rem 0rem;
   vertical-align: middle;
   text-align: center;
   font-weight: 500;
@@ -32,15 +32,34 @@ li {
   display: inline-block;
 }
 
-[type="button"]:hover,
-[type="submit"]:hover,
-button:hover {
-  background-color: rgb(255, 167, 167);
+button.small {
+  background-color:rgb(255, 255, 255);
+  width: 50px;
+  height: 30px;
+  font-size: 10px;
+  padding: 0rem 0rem;
+  border-radius: 5px;
 }
 
-.buttons {
-  text-align: justify;
-  display: inline-block;
+button.remove:hover {
+  background-color: rgb(255, 128, 128);
+}
+
+button.rename:hover {
+  background-color:rgb(255, 255, 128);
+}
+
+Button.add_task {
+  background-color: rgb(0, 255, 255);
+  width: 200px;
+  height: 50px;
+  border-radius: 20px;
+  border-width: 3px;
+  font-weight: 1000;
+  margin-top: 15px;
+}
+button.add_task:hover {
+  background-color: rgb(200, 255, 255)
 }
 
 /* == HTML == */
@@ -63,10 +82,35 @@ html {
   scroll-behavior: smooth;
   box-sizing: border-box;
   font-size: 18px;
+  background-color: black;
 }
 
+[type=div],
 div {
   margin-bottom: 1rem;
+}
+div.label {
+  background-color: rgb(0, 255, 255);
+  border-color:rgb(0, 0, 0);
+  border-radius: 10px;
+  border-width: 3px;
+  font-size: 20px;
+  padding-left: 10px;
+  font-weight: 1000;
+  box-shadow: inset 0 3px 6px rgba(4, 0, 255, 0.507), 0 4px 6px rgba(33, 0, 85, 0.45);
+}
+div.title {
+  color: rgb(0, 64, 128);
+  position: relative;
+  top: 10px;
+  width: fit-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: inset 0 3px 6px rgb(0, 217, 255);
+  border-radius: 10px;
 }
 
 /* body */
@@ -74,6 +118,9 @@ div {
 body {
   box-sizing: border-box;
   min-height: 100%;
+  border-radius: 50px;
+  background-color: rgb(200, 255, 255) !important;
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.8)
 }
 
 /* Anchors */
@@ -94,19 +141,17 @@ a:hover {
 h1,
 h2,
 h3,
-h4 {
-  color: #1874ca;
+h4,
+h5 {
+  color: #00509b6e;
   margin-top: 2rem;
-  line-height: 1.2;
 }
 
 h1 {
+  color: #02005e;
   font-size: 2.6rem;
+  font-weight: 1000 !important;
   margin: 1rem 1rem 1rem 0;
-}
-
-h4 {
-  padding: 20px;
 }
 
 /**/
